--- a/Config_Files/config.toml
+++ b/Config_Files/config.toml
@@ -20,8 +20,8 @@ final-lr = 0.0001
 epochs = 200
 
 # GPU/CPU and other training stuff
-accelerator = cpu
-num-workers = 0
+accelerator = gpu
+num-workers = 5
 devices = auto
 ensemble-size = 1
 
