--- a/Config_Files/config_hpopt.toml
+++ b/Config_Files/config_hpopt.toml
@@ -26,7 +26,7 @@ final-lr = 0.0001
 epochs = 50
 
 # GPU/CPU and other training stuff
-accelerator = cuda
+accelerator = cpu
 num-workers = 4
 devices = auto
 ensemble-size = 1
