--- a/Config_Files/config_hpopt.toml
+++ b/Config_Files/config_hpopt.toml
@@ -26,12 +26,12 @@ final-lr = 0.0001
 epochs = 50
 
 # GPU/CPU and other training stuff
-accelerator = cpu
+accelerator = gpu
 num-workers = 4
 devices = auto
 ensemble-size = 1
 raytune-num-workers = 1
-raytune-use-gpu = False
+raytune-use-gpu = True
 
 
 # Don't Change
