--- a/Config_Files/config_cond.toml
+++ b/Config_Files/config_cond.toml
@@ -1,6 +1,6 @@
 # PATH Variables
 config-path = /home/bhanu/Documents/GitHub/Thermal_Fluid_Prediction_GNN/Config_Files/config.toml
-data-path = /home/bhanu/Documents/GitHub/Thermal_Fluid_Prediction_GNN/Datasets/viscosity_data.csv
+data-path = /home/bhanu/Documents/GitHub/Thermal_Fluid_Prediction_GNN/Datasets/cond_data.csv
 output-dir = /home/bhanu/Documents/Chemprop_Models/
 
 # Hyperparameters
@@ -28,7 +28,7 @@ ensemble-size = 1
 
 
 # Don't Change
-target-columns = [Viscosity]
+target-columns = [Conductivity]
 smiles-columns = [smiles]
 splits-column = splits
 split = RANDOM
