--- a/Config_Files/config_cond.toml
+++ b/Config_Files/config_cond.toml
@@ -4,16 +4,16 @@ data-path = /home/bhanu/Documents/GitHub/Thermal_Fluid_Prediction_GNN/Datasets/c
 output-dir = /home/bhanu/Documents/Chemprop_Models/
 
 # Hyperparameters
-activation = SELU
-aggregation = sum
-aggregation-norm = 150
+activation = RELU
+aggregation = mean
+aggregation-norm = 100
 ffn-num-layers = 1
 warmup-epochs = 1
-batch-size = 32
-message-hidden-dim = 1700
+batch-size = 64
+message-hidden-dim = 300
 depth = 3
 dropout = 0.0
-ffn-hidden-dim = 1700
+ffn-hidden-dim = 300
 init-lr = 0.0000336
 max-lr = 0.000672
 final-lr = 0.0006
