--- a/Config_Files/config_cond.toml
+++ b/Config_Files/config_cond.toml
@@ -1,6 +1,6 @@
 # PATH Variables
 config-path = /home/bhanu/Documents/GitHub/Thermal_Fluid_Prediction_GNN/Config_Files/config.toml
-data-path = /home/bhanu/Documents/GitHub/Thermal_Fluid_Prediction_GNN/Datasets/cond_data.csv
+data-path = /home/bhanu/Documents/GitHub/Thermal_Fluid_Prediction_GNN/Datasets/cond_data_debug.csv
 output-dir = /home/bhanu/Documents/Chemprop_Models/
 
 # Hyperparameters
@@ -14,9 +14,9 @@ message-hidden-dim = 300
 depth = 3
 dropout = 0.0
 ffn-hidden-dim = 300
-init-lr = 0.0000336
-max-lr = 0.000672
-final-lr = 0.0006
+init-lr = 0.0001
+max-lr = 0.001
+final-lr = 0.0001
 epochs = 5
 
 # GPU/CPU and other training stuff
