modified:   Config_Files/config_cond.toml 	modified:   Datasets/cond_data_debug.csv

--- a/Config_Files/config_cond.toml
+++ b/Config_Files/config_cond.toml
@@ -29,7 +29,7 @@ ensemble-size = 1
 
 
 # Don't Change
-target-columns = [Conductivity]
+target-columns = [Viscosity]
 smiles-columns = [smiles]
 splits-column = splits
 split = RANDOM
