--- a/Config_Files/config_cond.toml
+++ b/Config_Files/config_cond.toml
@@ -4,19 +4,19 @@ data-path = /home/bhanu/Documents/GitHub/Thermal_Fluid_Prediction_GNN/Datasets/c
 output-dir = /home/bhanu/Documents/Chemprop_Models/
 
 # Hyperparameters
-activation = SELU
+activation = ELU
 aggregation = sum
-aggregation-norm = 150
-ffn-num-layers = 1
-warmup-epochs = 1
-batch-size = 32
-message-hidden-dim = 1700
+aggregation-norm = 73
+ffn-num-layers = 2
+warmup-epochs = 17
+batch-size = 64
+message-hidden-dim = 1000
 depth = 3
-dropout = 0.0
-ffn-hidden-dim = 1700
-init-lr = 0.0000336
-max-lr = 0.000672
-final-lr = 0.0006
+dropout = 0.1
+ffn-hidden-dim = 1100
+init-lr = 0.00140559
+max-lr = 0.0026817
+final-lr = 0.00025257
 epochs = 200
 
 
