--- a/Config_Files/config_arr.toml
+++ b/Config_Files/config_arr.toml
@@ -4,20 +4,20 @@ data-path = /home/bhanu/Documents/GitHub/Thermal_Fluid_Prediction_GNN/Datasets/v
 output-dir = /home/bhanu/Documents/Chemprop_Models/
 
 # Hyperparameters
-activation = PRELU
+activation = SELU
 aggregation = mean
-aggregation-norm = 38
-ffn-num-layers = 2
-warmup-epochs = 11
-batch-size = 256
-message-hidden-dim = 1600
-depth = 3
-dropout = 0.6
-ffn-hidden-dim = 1400
-init-lr = 0.000376
-max-lr = 0.0017187
-final-lr = 0.00016095
-epochs = 200
+aggregation-norm = 64
+ffn-num-layers = 1
+warmup-epochs = 22
+batch-size = 32
+message-hidden-dim = 2400
+depth = 4
+dropout = 0.0
+ffn-hidden-dim = 600
+init-lr = 0.00010287
+max-lr = 0.0010235
+final-lr = 0.0000230707
+epochs = 50
 
 # GPU/CPU and other training stuff
 accelerator = gpu
