modified:   Config_Files/config_hpopt.toml

--- a/Config_Files/config_hpopt.toml
+++ b/Config_Files/config_hpopt.toml
@@ -1,13 +1,13 @@
 # PATH Variables
 config-path = /home/bhanu/Documents/GitHub/Thermal_Fluid_Prediction_GNN/Config_Files/config_hpopt.toml
-data-path = /home/bhanu/Documents/GitHub/Thermal_Fluid_Prediction_GNN/Datasets/viscosity_data.csv
+data-path = /home/bhanu/Documents/GitHub/Thermal_Fluid_Prediction_GNN/Datasets/cond_data.csv
 output-dir = /home/bhanu/Documents/Chemprop_Models/
 
 #hpopt stuff
-raytune-num-samples = 120
-hyperopt-n-initial-points = 60
+raytune-num-samples = 1200
+hyperopt-n-initial-points = 600
 hpopt-save-dir = /home/bhanu/Documents/Chemprop_Models/hpopt
-search-parameter-keywords = loss_reg
+search-parameter-keywords = all
 
 # Hyperparameters
 activation = RELU
@@ -36,7 +36,7 @@ raytune-use-gpu = True
 
 
 # Don't Change
-target-columns = [Viscosity]
+target-columns = [Conductivity]
 smiles-columns = [smiles]
 splits-column = splits
 split = RANDOM
