--- a/Config_Files/config_transfer.toml
+++ b/Config_Files/config_transfer.toml
@@ -1,25 +1,25 @@
 # PATH Variables
 config-path = /home/bhanu/Documents/GitHub/Thermal_Fluid_Prediction_GNN/Config_Files/config_transfer.toml
-data-path = /home/bhanu/Documents/GitHub/Thermal_Fluid_Prediction_GNN/Datasets/vapour_pressure_data.csv
+data-path = /home/bhanu/Documents/GitHub/Thermal_Fluid_Prediction_GNN/Datasets/viscosity_data.csv
 output-dir = /home/bhanu/Documents/Chemprop_Models/
-model-frzn = /home/bhanu/Documents/Chemprop_Models/Best_Models/viscosity/best.pt
+model-frzn = /home/bhanu/Documents/best_model_files/conductivity/best_model/checkpoint.ckpt
 
 
 # Hyperparameters
-activation = ELU
+activation = SELU
 aggregation = sum
-aggregation-norm = 59
-ffn-num-layers = 2
-warmup-epochs = 8
-batch-size = 128
-message-hidden-dim = 2300
-depth = 2
+aggregation-norm = 150
+ffn-num-layers = 1
+warmup-epochs = 1
+batch-size = 32
+message-hidden-dim = 1700
+depth = 3
 dropout = 0.0
-ffn-hidden-dim = 500
-init-lr = 0.00001632
-max-lr = 0.00042856
-final-lr = 0.000005124
-epochs = 500
+ffn-hidden-dim = 1700
+init-lr = 0.0000336
+max-lr = 0.000672
+final-lr = 0.0006
+epochs = 100
 frzn-ffn-layers = 0
 
 # GPU/CPU and other training stuff
@@ -31,7 +31,7 @@ ensemble-size = 1
 
 
 # Don't Change
-target-columns = [vapor_pressure]
+target-columns = [Viscosity]
 smiles-columns = [smiles]
 splits-column = splits
 split = RANDOM
