--- a/Config_Files/config_transfer.toml
+++ b/Config_Files/config_transfer.toml
@@ -2,7 +2,7 @@
 config-path = /home/bhanu/Documents/GitHub/Thermal_Fluid_Prediction_GNN/Config_Files/config_transfer.toml
 data-path = /home/bhanu/Documents/GitHub/Thermal_Fluid_Prediction_GNN/Datasets/viscosity_transfer.csv
 output-dir = /home/bhanu/Documents/Chemprop_Models/
-model-frzn = /home/bhanu/Documents/best_model_files/conductivity/best_model/checkpoint.ckpt
+model-frzn = /home/bhanu/Documents/Chemprop_Models/best.pt
 
 
 # Hyperparameters
@@ -12,14 +12,14 @@ aggregation-norm = 150
 ffn-num-layers = 1
 warmup-epochs = 1
 batch-size = 32
-dropout = 0.5
+dropout = 0.0
 ffn-hidden-dim = 10
 init-lr = 0.0000336
 max-lr = 0.000672
 final-lr = 0.0006
-loss_reg = 1
-epochs = 100
-frzn-ffn-layers = 0
+loss_reg = 0.3
+epochs = 20
+
 
 # GPU/CPU and other training stuff
 accelerator = gpu
