--- a/Config_Files/config_mac.toml
+++ b/Config_Files/config_mac.toml
@@ -1,36 +1,35 @@
 # PATH Variables
 config-path = /Users/bhanumamillapalli/Documents/GitHub/Thermal_Fluid_Prediction_GNN/Config_Files/config_mac.toml
-data-path = /Users/bhanumamillapalli/Documents/GitHub/Thermal_Fluid_Prediction_GNN/Datasets/cond_data.csv
+data-path = /Users/bhanumamillapalli/Desktop/9.csv
 output-dir = /Users/bhanumamillapalli/Documents/Chemprop_Models/
 
 # Hyperparameters
-activation = ELU
-aggregation = sum
-aggregation-norm = 150
+activation = RELU
+aggregation = mean
+aggregation-norm = 100
 ffn-num-layers = 1
-warmup-epochs = 1
-batch-size = 32
-message-hidden-dim = 1700
+warmup-epochs = 2
+batch-size = 10
+message-hidden-dim = 300
 depth = 3
 dropout = 0.0
-ffn-hidden-dim = 1700
-init-lr = 0.0000336
-max-lr = 0.000672
-final-lr = 0.0006
-epochs = 10
+ffn-hidden-dim = 300
+init-lr = 0.0001
+max-lr = 0.001
+final-lr = 0.0001
+epochs = 50
 
 # GPU/CPU and other training stuff
 accelerator = cpu
-num-workers = 1
+num-workers = 0
 devices = auto
 ensemble-size = 1
 
 
 
 # Don't Change
-target-columns = [Conductivity]
+target-columns = [target]
 smiles-columns = [smiles]
-splits-column = splits
 split = RANDOM
 split-sizes = [0.8, 0.1, 0.1]
 split-key-molecule = 0
