--- a/Config_Files/config_train.toml
+++ b/Config_Files/config_train.toml
@@ -1,23 +1,24 @@
 # PATH Variables
-config-path = /home/bhanu/Documents/GitHub/Thermal_Fluid_Prediction_GNN/Config_Files/config.toml
-data-path = /home/bhanu/Documents/GitHub/Thermal_Fluid_Prediction_GNN/Datasets/viscosity_data.csv
-output-dir = /home/bhanu/Documents/GitHub/Thermal_Fluid_Prediction_GNN/Config_Files/Models/
+config-path = PATH to config file
+data-path = PATH to data as .csv
+output-dir = PATH to directory to store model
 
-# Hyperparameters
-activation = RELU
-aggregation = mean
+# Hyperparameters (options listed if discrete, otherwise set to default)
+activation = RELU / SELU / ELU / PRELU / LEAKYRELU
+aggregation = mean / sum / norm
 aggregation-norm = 100
 ffn-num-layers = 3
 warmup-epochs = 2
 batch-size = 64
-message-hidden-dim = 200
+message-hidden-dim = 300
 depth = 3
-dropout = 0.7
-ffn-hidden-dim = 200
+dropout = 0.0
+ffn-hidden-dim = 300
 init-lr = 0.0001
 max-lr = 0.001
 final-lr = 0.0001
-epochs = 200
+loss_reg = 0.0
+epochs = 50
 
 # GPU/CPU and other training stuff
 accelerator = cpu
@@ -25,14 +26,15 @@ num-workers = 0
 devices = auto
 ensemble-size = 1
 
-
-
-# Don't Change
-target-columns = [Viscosity]
+# For handling data
+target-columns = [target]
 smiles-columns = [smiles]
 splits-column = splits
 split = RANDOM
 split-sizes = [0.8, 0.1, 0.1]
+
+
+# Other stuff, dont need to change
 split-key-molecule = 0
 num-folds = 1
 data-seed = 0
