--- a/Config_Files/config_train copy.toml
+++ b/Config_Files/config_train copy.toml
@@ -3,6 +3,10 @@ config-path = PATH to config file
 data-path = PATH to data as .csv
 output-dir = PATH to directory to store model
 
+# Transfer learning stuff
+model-frzn = PATH to model checkpoint file to use for transfer learning
+frzn-ffn-layers = 0
+
 # Hyperparameters (options listed if discrete, otherwise set to default)
 activation = RELU / SELU / ELU / PRELU / LEAKYRELU
 aggregation = mean / sum / norm
@@ -17,6 +21,7 @@ ffn-hidden-dim = 300
 init-lr = 0.0001
 max-lr = 0.001
 final-lr = 0.0001
+loss_reg = 0.0
 epochs = 50
 
 # GPU/CPU and other training stuff
@@ -24,8 +29,6 @@ accelerator = cpu
 num-workers = 0
 devices = auto
 ensemble-size = 1
-
-
 
 # For handling data
 target-columns = [target]
@@ -42,7 +45,6 @@ data-seed = 0
 task-type = regression
 rxn-mode = REAC_DIFF
 multi-hot-atom-featurizer-mode = V2
-frzn-ffn-layers = 0
 multiclass-num-classes = 3
 v-kl = 0.0
 eps = 1e-08
