modified:   Report/results/BT_big/0.1_preds/m0.csv

--- a/Report/config_files/config_transfer_BT.toml
+++ b/Report/config_files/config_transfer_BT.toml
@@ -1,12 +1,12 @@
 # PATH Variables
 config-path = /home/bhanu/Documents/GitHub/Thermal_Fluid_Prediction_GNN/Config_Files/config_transfer.toml
-data-path = /home/bhanu/Documents/GitHub/Thermal_Fluid_Prediction_GNN/Report/Data/cond/cond_0.1.csv
+data-path = /home/bhanu/Documents/GitHub/Thermal_Fluid_Prediction_GNN/Report/Data/cond/cond_0.7.csv
 output-dir = /home/bhanu/Documents/Chemprop_Models/
 model-frzn = /home/bhanu/Documents/GitHub/Thermal_Fluid_Prediction_GNN/Barlow_Twins/BT_big.ckpt
 
 
 # Hyperparameters
-activation = leakyrelu
+activation = selu
 aggregation = mean
 aggregation-norm = 100
 ffn-num-layers = 1
